# libensemble

./: .black  .codecov.yml  .codespellrc  .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .spell  .style.yapf  .travis.yml  .typos.toml  .wci.yml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  SUPPORT.rst  convert-to-importable.sh  debug_test_jobcontroller_hworld.py  pyproject.toml  run-tests.sh  setup.cfg  setup.py  test.txt  tmp.yml  travis_setup_and_jcdebug.sh
.github/: dependabot.yml
.github/workflows/: balsam.yml  basic.yml  ci.yml  complete.yml  draft-pdf.yml  extra.yml  libE-ci.yml  simple.yml  update-lockfiles.yml
balsam-scripts/: balsam.libe.sh  setup_balsam_env.sh
binder/: apt.txt  environment.yml  postBuild
code/src/: __init__.py  job_class.py  libE.py  libE_fields.py  libE_manager.py  libE_worker.py  message_numbers.py  worker_class.py
code/tests/: .coveragerc  run-tests.sh
code/unit_tests/: test_manager_main.py
conda/: balsam-setup.sh  build-conda-package.sh  conda-install-deps.sh  configure-balsam-test.sh  environment.yml  find_mpi.py  install-balsam.py  replicate-travis-local.sh  test_balsam.py  test_balsam_hworld.py
conda/run_travis_locally/: build_mpich_libE.sh  condarc_newlines.txt  get-macossdk.sh  readme.md
doc/: planning_doc.tex
docs/: FAQ.rst  Makefile  advanced_installation.rst  appendix.rst  architecture_html.rst  bibliography.rst  conf.py  contributing.rst  custodian_modules.rst  deps.rst  dev_info.rst  developer_guide.rst  examples.rst  examples_modules.rst  function_guide.rst  glossary_and_usage  history_output.rst  history_output_logging.rst  index.rst  introduction.rst  introduction_latex.rst  known_issues.rst  latex_index.rst  legacy.rst  libE_module.rst  libe_module.rst  logging.rst  manager_modules.rst  nitpicky  overview_usecases.rst  posters.rst  programming_libE.rst  quickstart.rst  references.bib  release_notes.rst  requirements.txt  rst_formatting_guidelines  running_libE.rst  scipy2020.ipynb  scipy2020.rst  (+9 more)
docs/_static/: custom.css  my_theme.css
docs/advanced_installation/: advanced_installation.rst  advanced_installation_conda.rst  advanced_installation_pip.rst  advanced_installation_pixi.rst  advanced_installation_spack.rst  advanced_installation_uv.rst
docs/data_structures/: alloc_specs.rst  calc_status.rst  data_structures.rst  ensemble_specs.rst  exit_criteria.rst  gen_specs.rst  history_array.rst  libE_specs.rst  libe_specs.rst  persis_info.rst  platform_specs.rst  sim_specs.rst  work_dict.rst  worker_array.rst
docs/dev_guide/: calc_info_module.rst  developer_API.rst  env_resources_module.rst  history_module.rst  manager_module.rst  mpi_resources_module.rst  resources_module.rst  worker_module.rst  worker_modules.rst
docs/examples/: alloc_funcs.rst  aposmm.rst  ax_multitask.rst  calling_scripts.rst  deap_nsga2.rst  examples_index.rst  fd_param_finder.rst  gen_classes.rst  gen_funcs.rst  gest_api.rst  gpcam.rst  persistent_sampling  persistent_sampling.rst  persistent_sampling_var_resources.rst  sampling.rst  sim_funcs.rst  submission_scripts.rst  surmise.rst  tasmanian.rst  uniform_or_localopt.rst  vtmop.rst
docs/executor/: balsam2_executor.rst  balsam_2_executor.rst  balsam_executor.rst  ex_base.rst  ex_globus_compute.rst  ex_index.rst  ex_mpi.rst  ex_overview.rst  executor.rst  legacy_balsam_executor.rst  mpi_executor.rst  overview.rst
docs/function_guides/: allocator.rst  ask_tell_generator.rst  calc_status.rst  function_guide_index.rst  generator.rst  generator_legacy.rst  generator_standardized.rst  history_array.rst  sim_gen_alloc_api.rst  (+5 more)
examples/: .gitignore  README.rst  ax_notebook.ipynb  call_libE_on_GKLS.py  readme_notebook.ipynb
gradslide/: anim.py  ddata.py  helper.py  main.py  nagent.py  nest.py  output.txt  pds.py  plot.py  print_metadata.py  pycute_interface.py  script.py  temp.txt  zosa.py
gx_example/: readme.txt  setup.sh
install/: cleanup-balsam-test.sh  conda-install-deps.sh  configure-balsam-test.sh  configure_balsam_install.py  environment.yml  find_mpi.py  gen_deps_environment.yml  gen_deps_pypi.txt  install-balsam.py  install_ibcdfo.sh  misc_feature_requirements.txt  test_balsam_hworld.py  testing_requirements.txt  ubuntu_no312.txt  ubuntu_pypi.txt
libE-IceSheet-GPU-Talon/: forces_simf.py  icesheet_simf.py  libE_stats.txt  run_libE_on_icesheet.py  slurm.sh
libE-IceSheet-main/: README.md
libensemble/: VERSION  __init__.py  _deprecation.py  api.py  array.py  balsam_controller.py  calc_info.py  comms.py  controller.py  ensemble.py  env_resources.py  generators.py  gradtrack_1.txt  gradtrack_output_d1.txt  gradtrack_output_d15.txt  gradtrack_output_d2.txt  gradtrack_output_d4.txt  gradtrack_output_d8.txt  history.py  independent_output.txt  information_about_W  job_class.py  launcher.py  libE.py  libE_directory.py  libE_fields.py  libE_logger.py  libE_manager.py  libE_process.py  libE_thread.py  libE_worker.py  loc_stack.py  logger.py  manager.py  message_numbers.py  mpi_comms.py  mpi_controller.py  mpi_resources.py  node_resources.py  options.py  (+14 more)
milestones/: ecp.eps  ecpreport.cls  ecpreport.tex  libEnsemble1.tex  libEnsemble2.pptx  libEnsemble2.tex  libEnsemble3.tex  references.bib
postproc_scripts/: compare_npy.py  plot_contours_and_history_points.py  plot_libE_histogram.py  plot_libe_calcs_util_v_time.py  plot_libe_histogram.py  plot_libe_runs_util_v_time.py  plot_pareto_2d.py  plot_pareto_3d.py  print_fields.py  print_npy.py  print_pickle.py  process_history_to_make_chart.py  readme.rst
scripts/: aposmm_min_loc.py  aposmm_plot_local_runs.py  compare_npy.py  liberegister  libesubmit  plot_contours_and_history_points.py  plot_libe_calcs_util_v_time.py  plot_libe_histogram.py  plot_libe_runs_util_v_time.py  plot_libe_tasks_util_v_time.py  plot_pareto_2d.py  plot_pareto_3d.py  print_fields.py  print_npy.py  print_pickle.py  process_history_to_make_chart.py  readme.rst
src/: libE.py  libE_manager.py  libE_worker.py  priority_queue.py
tex/: .gitignore
(+1354 files in other folders)
