[project]

authors = [
  { name = "Jeffrey Larson" },
  { name = "Stephen Hudson" },
  { name = "Stefan M. Wild" },
  { name = "David Bindel" },
  { name = "John-Luke Navarro" },
]

dependencies = ["numpy", "psutil", "pydantic", "pyyaml", "tomli"]

description = "A Python toolkit for coordinating asynchronous and dynamic ensembles of calculations."
name = "libensemble"
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.rst"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://libensemble.readthedocs.io/en/main/"
Repository = "https://github.com/Libensemble/libensemble"
Issues = "https://github.com/Libensemble/libensemble/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pip>=24.3.1,<26", "setuptools>=75.1.0,<81"]

[tool.setuptools.packages.find]
where = ["."]
include = ["libensemble*"]

[tool.setuptools.dynamic]
version = { attr = "libensemble.version.__version__" }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
libensemble = { path = ".", editable = true }

[tool.pixi.environments]
default = []
basic = ["basic"]
extra = ["basic", "extra"]
docs = ["docs", "basic"]

dev = ["dev", "basic", "extra", "docs"]

# CI environments
py310 = ["py310", "basic"]
py311 = ["py311", "basic"]
py312 = ["py312", "basic"]
py313 = ["py313", "basic"]
py314 = ["py314", "basic"]

py310e = ["py310", "py310e", "basic", "extra"]
py311e = ["py311", "py311e", "basic", "extra"]
py312e = ["py312", "py312e", "basic", "extra"]
py313e = ["py313", "py313e", "basic", "extra"]
py314e = ["py314", "py314e", "basic", "extra"]

# Extra tools for dev environment
[tool.pixi.feature.dev.dependencies]
pre-commit = ">=4.1.0,<5"
git-lfs = ">=3.6.1,<4"

# Basic dependencies for basic CI
[tool.pixi.feature.basic.dependencies]
mpi = ">=1.0.1,<2"
mpich = ">=4.0.0,<5"
mpi4py = ">=4.0.3,<5"
scipy = ">=1.13,<2"
mpmath = ">=1.3.0,<2"

# "dev" dependencies needed for basic CI
flake8 = ">=7.1.2,<8"
coverage = ">=7.6.12,<8"
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
pytest-timeout = ">=2.3.1,<3"
mock = ">=5.2.0,<6"
python-dateutil = ">=2.9.0.post0,<3"
rich = ">=13.9.4,<14"
matplotlib = ">=3.10.1,<4"

# Extra dependencies for extra CI
[tool.pixi.feature.extra.dependencies]
superlu_dist = ">=9.0.0,<10"
hypre = ">=2.32.0,<3"
mumps-mpi = ">=5.7.3,<6"
dfo-ls = ">=1.3.0,<2"
petsc = ">=3.23.0,<4"
petsc4py = ">=3.23.0,<4"
ninja = ">=1.13.1,<2"        # for building Tasmanian from pypi

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.1,<9"
sphinxcontrib-bibtex = ">=2.6.3,<3"
sphinx-design = ">=0.6.1,<0.7"
sphinx_rtd_theme = ">=3.0.1,<4"
sphinx-copybutton = ">=0.5.2,<0.6"
pre-commit = ">=4.2.0,<5"
scipy = ">=1.15.2,<2"
ax-platform = ">=0.5.0,<0.6"
sphinxcontrib-spelling = ">=8.0.1,<9"
autodoc-pydantic = ">=2.1.0,<3"
ipdb = ">=0.13.13,<0.14"
mypy = ">=1.15.0,<2"
types-psutil = ">=6.1.0.20241221,<7"
types-pyyaml = ">=6.0.12.20250402,<7"

# Linux dependencies, only for extra tests
[tool.pixi.feature.extra.target.linux-64.dependencies]
scikit-build = ">=0.18.1,<0.19"
packaging = ">=25.0,<26"

# Python versions
# nlopt only works up to python 3.13
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
nlopt = "<=2.9.0"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
nlopt = "<=2.9.0"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
nlopt = "<=2.9.0"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
nlopt = "<=2.9.0"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

# Octave, ax-platform only works up to 3.13 on Linux
[tool.pixi.feature.py310e.target.linux-64.dependencies]
octave = ">=9.4.0,<10"
ax-platform = ">=0.5.0,<0.6"
pyzmq = ">=26.4.0,<27"

[tool.pixi.feature.py311e.target.linux-64.dependencies]
octave = ">=9.4.0,<10"
ax-platform = ">=0.5.0,<0.6"
pyzmq = ">=26.4.0,<27"

[tool.pixi.feature.py312e.target.linux-64.dependencies]
octave = ">=9.4.0,<10"
ax-platform = ">=0.5.0,<0.6"
pyzmq = ">=26.4.0,<27"

[tool.pixi.feature.py313e.target.linux-64.dependencies]
octave = ">=9.4.0,<10"
ax-platform = ">=0.5.0,<0.6"
pyzmq = ">=26.4.0,<27"

[tool.pixi.feature.py314e.target.linux-64.dependencies]


# Dependencies for libEnsemble
[tool.pixi.dependencies]
python = ">=3.10,<3.15"
pip = ">=24.3.1,<25"
setuptools = ">=75.6.0,<76"
numpy = ">=1.21,<3"
pydantic = ">=2,<3"
pyyaml = ">=6.0,<7"
tomli = ">=1.2.1,<3"
psutil = ">=5.9.4,<7"

# macOS dependencies
[tool.pixi.target.osx-arm64.dependencies]
clang_osx-arm64 = ">=21.1.4,<22"

# Linux dependencies
[tool.pixi.target.linux-64.dependencies]
gxx_linux-64 = ">=14.2.0,<15"

# Extra dependencies, from pypi
[dependency-groups]
extra = [
  "pyenchant",
  "enchant>=0.0.1,<0.0.2",
  "proxystore>=0.7.0",
  "redis>=6.0.0,<7",
  "globus-compute-sdk>=2.28.0,<3",
]
dev = ["wat>=0.7.0,<0.8"]

# Various config from here onward
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
force-exclude = '''
(
  /(
    | \.git
    | \.github
  )/
    | libensemble/files/to/avoid
)
'''

[tool.typos.default]
extend-ignore-identifiers-re = [".*NDArray.*", "8ba9de56.*"]

[tool.typos.default.extend-words]
als = "als"
datas = "datas"
numer = "numer"
inout = "inout"
arange = "arange"
wrk = "wrk"
EOF = "EOF"
HPE = "HPE"
RO = "RO"
lst = "lst"
noy = "noy"
inpt = "inpt"

[tool.typos.files]
extend-exclude = ["*.bib", "*.xml", "docs/nitpicky"]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]
