[project]

authors = [{name = "Jeffrey Larson"}, {name = "Stephen Hudson"},
            {name = "Stefan M. Wild"}, {name = "David Bindel"},
            {name = "John-Luke Navarro"}]

dependencies = ["numpy", "psutil", "pyyaml", "tomli", "gest-api @ git+https://github.com/campa-consortium/gest-api@main", "pydantic"]

description = "A Python toolkit for coordinating asynchronous and dynamic ensembles of calculations."
name = "libensemble"
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.rst"

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Operating System :: MacOS",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://libensemble.readthedocs.io/en/main/"
Repository = "https://github.com/Libensemble/libensemble"
Issues = "https://github.com/Libensemble/libensemble/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pip>=24.3.1,<26", "setuptools>=75.1.0,<81", ]

[tool.setuptools.packages.find]
where = ["."]
include = ["libensemble*"]

[tool.setuptools.dynamic]
version = {attr = "libensemble.version.__version__"}

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
libensemble = { path = ".", editable = true }

[tool.pixi.environments]
default = []
dev = ["dev"]

[tool.pixi.feature.dev.dependencies]
mpi = ">=1.0.1,<2"
mpich = ">=4.3.0,<5"
mpi4py = ">=4.0.3,<5"
flake8 = ">=7.2.0,<8"
coverage = ">=7.8.0,<8"
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.1.1,<7"
pytest-timeout = ">=2.3.1,<3"
mock = ">=5.2.0,<6"
python-dateutil = ">=2.9.0.post0,<3"
anyio = ">=4.9.0,<5"
matplotlib = ">=3.10.1,<4"
mpmath = ">=1.3.0,<2"
rich = ">=14.0.0,<15"
sphinx = ">=8.2.3,<9"
sphinxcontrib-bibtex = ">=2.6.3,<3"
sphinx-design = ">=0.6.1,<0.7"
sphinx_rtd_theme = ">=3.0.1,<4"
sphinx-copybutton = ">=0.5.2,<0.6"
pre-commit = ">=4.2.0,<5"
nlopt = ">=2.10.0,<3"
scipy = ">=1.15.2,<2"
ax-platform = ">=0.5.0,<0.6"
sphinxcontrib-spelling = ">=8.0.1,<9"
autodoc-pydantic = ">=2.1.0,<3"
ipdb = ">=0.13.13,<0.14"
mypy = ">=1.15.0,<2"
types-psutil = ">=6.1.0.20241221,<7"
types-pyyaml = ">=6.0.12.20250402,<7"

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pip = ">=24.3.1,<25"
setuptools = ">=75.6.0,<76"
numpy = ">=1.21,<3"
pydantic = ">=2.11.7,<3"
pyyaml = ">=6.0,<7"
tomli = ">=1.2.1,<3"
psutil = ">=5.9.4,<7"

[tool.pixi.target.osx-arm64.dependencies]
clang_osx-arm64 = ">=19.1.2,<20"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
force-exclude = '''
(
  /(
    | \.git
    | \.github
  )/
    | libensemble/files/to/avoid
)
'''

[tool.typos.default]
extend-ignore-identifiers-re = [
    ".*NDArray.*",
    "8ba9de56.*"
]

[tool.typos.default.extend-words]
als = "als"
datas = "datas"
numer = "numer"
inout = "inout"
arange = "arange"
wrk = "wrk"
EOF = "EOF"
HPE = "HPE"
RO = "RO"
lst = "lst"
noy = "noy"
inpt = "inpt"

[tool.typos.files]
extend-exclude = ["*.bib", "*.xml", "docs/nitpicky"]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]

[dependency-groups]
dev = ["pyenchant", "enchant>=0.0.1,<0.0.2", "flake8-modern-annotations>=1.6.0,<2", "flake8-type-checking>=3.0.0,<4", "wat>=0.6.0,<0.7"]
